Align elements on top to avoid issues on chrome and safari

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,17 +9,15 @@ body {
   background-color: #9bff7a;
   margin: 0;
   font-family: system;
-  height: 100vh;
+  overflow: hidden;
 }
 
 #app {
   width: 20rem;
-  height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 1rem;
   position: relative;
 }
